# langchain-demo

./: .env.example  .gitignore  README.md  budget.json  evaluation_report.md  pyproject.toml  ruff.toml
decision-agent/: decision_agent_graph.mmd  graph.py  main.py  schemas.py  visualize.py
evaluator-optimizer/: __init__.py  graph.py  main.py  schemas.py
orchestrator-worker/: __init__.py  graph.py  main.py  schemas.py
parallel-agent/: README.md  main.py  schemas.py  sectioning.py  test_parallel.py  voting.py
research-agent/: .last_checkpoint.txt  ARCHITECTURE_COMPARISON.md  CHECKLIST_STATUS.md  COST_CONTROL.md  MEASUREMENT_PLAN.md  METRICS_AND_KPIs.md  MVP_ANALYSIS.md  QUANTIFIED_REQUIREMENTS.md  QUICK_START.md  README.md  REQUIREMENTS_CHECKLIST.md  SECURITY_ANALYSIS.md  TESTING_PLAN.md  __init__.py  budget.json  citation_parser.py  config.py  context_chunker.py  context_formatter.py  context_manager.py  cost_control.py  extraction_service.py  extraction_utils.py  graph.py  graph_helpers.py  graph_store.json  main.py  memory_helpers.py  prompts.py  pytest.ini  retrieval.py  schemas.py  test_agent_with_citations.py  text_utils.py  tools.py  tracing.py
research-agent/data/: internal_alpha.txt
research-agent/docs/: ARCHITECTURE.md  KNOWN_ISSUES.md  MEMORY.md  NEO4J_VISUALIZATION.md  RETROSPECTIVE.md  SUBAGENT_DESIGN.md  SYNTHESIZER_DESIGN.md  WORKFLOW_DESIGN.md  WORKFLOW_FEEDBACK.md
research-agent/graph/: __init__.py  builder.py  error_handler.py  message_channel.py  message_router.py  node_interface.py  utils.py  (+2 more)
router-agent/: graph.py  main.py  schemas.py
(+90 files in other folders)
