[project]
name = "langchain-agent"
version = "0.1.0"
description = "LangChain agent with multiple patterns"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.6",
    "langchainhub>=0.1.21",
    "langgraph>=1.0.5",
    "langgraph-cli>=0.4.11",
    "langsmith>=0.5.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "tavily-python>=0.7.17",
]
